<?xml version="1.0" encoding="utf-8"?>
    <resources>

        <string name="app_name">Slider Menu</string>
        <string name="action_settings">Settings</string>
        <string name="hello_world">Hello world!</string>
        <string name="drawer_open">Slider Menu Opened</string>
        <string name="drawer_close">Slider Menu Closed</string>
        <string name="menu_settings">Paramètres</string>
        <string name="title_activity_main">MainActivity</string>
        <string name="menu_search">Recherche</string>
        <string name="menu_refresh">Rafraichir</string>
        <string name="menu_help">Aide</string>
        <string name="menu_about">A propos</string>
        <string name="error" color="#FFFFFF">Error!</string>
    <string name="mapKey" >AIzaSyCkI_3EYpIqgl8A8LKjovgKe-lutLseFIQ</string>

    <!-- Nav Drawer Menu Items -->
        <string-array name="nav_drawer_items">
            <item >Home</item>
            <item >Find People</item>
            <item >Photos</item>
            <item >Communities</item>
            <item >Pages</item>
            <item >What\'s Hot</item>
        </string-array>

        <!-- Nav Drawer List Item Icons -->
        <!-- Keep them in order as the titles are in -->
        <array name="nav_drawer_icons">

        </array>

        <!-- Content Description -->
        <string name="desc_list_item_icon">Item Icon</string>

    </resources>

